--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,8 +10,8 @@ jobs:
    test:
       env:
          MONGODB_CLUSTER_ADDRESS: firstcluster.danzwdj.mongodb.net
-         MONGODB_USERNAME: admin
-         MONGODB_PASSWORD: Enternow1337
+         MONGODB_USERNAME: ${{ secrets.MONGODB_USERNAME }}
+         MONGODB_PASSWORD: ${{ secrets.MONGODB_PASSWORD }}
          PORT: 8080
       environment: testing
       runs-on: ubuntu-latest
